$Id: History,v 1.17 2001-02-20 11:57:29 stesting Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Example N02 History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

20-02-01  S.O'Neale (exampleN02-V03-00-03) update reference outputs following
   materials-V03-00-04 (tagset 268)

09-02-01 M.Asai (exampleN02-V03-00-02)
- Migration to STL vector classes
 affected file : ExN02SteppingVerbose.cc

31-02-05 S.O'Neale (exampleN02-V03-00-01)
- update reference output for Batch Mode system testing for
  exampleN02-V03-00-00 and recent EM Physics tags.

31-01-01 G.Cosmo (exampleN02-V03-00-00)
- fix to ExN02ChamberParameterisation and ExN02DetectorConstruction
  to cope with bug report #186. Parameterisation of chambers was not
  taking into account that copyNo starts from 0, therefore dimensions
  of the first chamber (parametrised G4Box) were set to negative values (!).
  This was causing the side-effect of visualising a "ghost" chamber (the
  first one close to the target), which was correctly not seen by tracking.
  Therefore, number of chambers is now reduced to 5 but global positioning
  and parameters have been preserved.

06-12-00 S.O'Neale (exampleN02-V02-00-03)
- update reference output for Batch Mode system testing
  in this context 0 trajectories stored is normal.

03-12-00 M.Maire (exampleN02-V02-00-02)
- README updated
- prerun.g4mac updated for new vis commands, and renamed initInter.mac