@@ -1,4 +1,4 @@
-$Id: History,v 1.17 2001-02-20 11:57:29 stesting Exp $
+$Id: History,v 1.18 2001-07-12 17:04:59 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+12-07-01 mma
+- DetectorMessenger: setField, help: magnetic field in X dirction      
 
 20-02-01  S.O'Neale (exampleN02-V03-00-03) update reference outputs following
    materials-V03-00-04 (tagset 268)
